--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "author": {
     "name":               "Franklin van de Meent",
     "email":              "fr@nkl.in",
-    "url":                "http://frankl.in"
+    "url":                "https://frankl.in"
   },
   "name":                 "vnstat-dumpdb",
-  "description":          "Wrapper for vnStat --dumpdb, with error handling and the same output structure on each system",
   "version":              "1.0.2",
+  "description":          "Get vnStat network traffic and configuration",
   "repository": {
     "type":               "git",
     "url":                "git://github.com/fvdm/nodejs-vnstat-dumpdb.git"
@@ -16,7 +16,7 @@
   },
   "main":                 "vnstat-dumpdb.js",
   "dependencies": {
-    "node-xml2json":      ">=1.0.0 <2.0.0"
+    "node-xml2json":      "1.x.x"
   },
   "devDependencies":      {},
   "optionalDependencies": {},
