Test: added test script

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "engines": {
     "node":               "*"
   },
+  "scripts": {
+    "test":               "node test.js"
+  },
   "keywords":             ["vnstat", "monitoring", "bandwidth"],
   "license": {
     "type":               "Public Domain",
