--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - 'sudo apt-get -yqq install colormake'
   - 'git clone https://github.com/vergoh/vnstat'
   - 'cd vnstat && colormake && sudo colormake install'
-  - 'sudo vnstat -u'
+  - 'sudo vnstat -d'
 node_js:
   - 'iojs-2.0'
   - 'iojs-1.8'
