--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,7 @@ before_install:
   - 'sudo apt-get -qq update'
   - 'sudo apt-get -yqq install colormake'
   - 'git clone https://github.com/vergoh/vnstat'
-  - 'cd vnstat && colormake && sudo colormake install && sudo cp -v examples/init.d/debian/vnstat /etc/init.d/'
-  - 'sudo update-rc.d vnstat defaults'
-  - 'sudo service vnstat start'
+  - 'cd vnstat && colormake && sudo colormake install && sudo vnstatd -d'
 node_js:
   - 'iojs-2.0'
   - 'iojs-1.8'
