--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 sudo: required
 language: node_js
 before_install:
-  - 'sudo apt-get -qq update'
-  - 'sudo apt-get -yqq install colormake'
-  - 'git clone https://github.com/vergoh/vnstat'
-  - 'cd vnstat && colormake && sudo colormake install && sudo vnstatd -d'
+  - 'sudo apt-get -qq update && sudo apt-get -yqq install colormake'
+  - 'git clone https://github.com/vergoh/vnstat && cd vnstat'
+  - 'colormake || true'
+  - 'sudo colormake install || true'
+  - 'sudo vnstatd -d'
 node_js:
   - 'iojs-2.0'
   - 'iojs-1.8'
