--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: node_js
 before_install:
   - 'wget https://frankl.in/u/vnstat_bin.tar'
   - 'tar xvf vnstat_bin.tar'
-  - 'sudo ./vnstatd -u -i venet0'
+  - 'sudo ./vnstatd -d'
+  - 'sudo ./vnstat -u -i venet0'
   - 'sudo cp -v ./vnstat /usr/bin/vnstat && chmod 755 $_'
 node_js:
   - 'iojs-2.0'
