--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: required
 language: node_js
+env:
+  - NODE_APP_IFACE=venet0
 before_install:
   - 'wget https://frankl.in/u/vnstat_bin.tar'
   - 'tar xvf vnstat_bin.tar'
