--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 sudo: required
 language: node_js
-env:
-  - NODE_APP_IFACE=venet0
 before_install:
   - 'wget https://frankl.in/u/vnstat_bin.tar'
   - 'tar xvf vnstat_bin.tar'
   - 'sudo ./vnstatd -d'
-  - 'sudo ./vnstat -u -i venet0'
+  - 'sudo ./vnstat -u -i $NODE_APP_IFACE'
   - 'sudo cp -v ./vnstat /usr/bin/'
 node_js:
   - '5'
