--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "url": "https://github.com/fvdm/nodejs-vnstat-dumpdb/issues"
   },
   "main": "vnstat-dumpdb.js",
+  "files": [
+    "preinstall.js",
+    "UNLICENSE"
+  ],
   "dependencies": {},
   "devDependencies": {
     "dotest": "^1.5.0",
