--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "node": ">=0.12"
   },
   "scripts": {
-    "test": "eslint . && node test.js",
+    "test": "st=0; eslint . || st=1; node test.js || st=1; exit $st",
     "preinstall": "node preinstall.js"
   },
   "keywords": [
