Chore(package): Replaced test runner and dev deps by dotest

--- a/package.json
+++ b/package.json
@@ -21,16 +21,13 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "coveralls": "^2.11.9",
-    "dotest": "^1.12.4",
-    "eslint": "^3.0.1",
-    "istanbul": "^0.4.4"
+    "dotest": "^1.13.0"
   },
   "engines": {
     "node": ">=4.0.0"
   },
   "scripts": {
-    "test": "bash test.sh",
+    "test": "dotest",
     "preinstall": "node preinstall.js"
   },
   "keywords": [
