Chore(package): Removed UNLICENSE from files prop

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "main": "vnstat-dumpdb.js",
   "files": [
-    "preinstall.js",
-    "UNLICENSE"
+    "preinstall.js"
   ],
   "dependencies": {},
   "devDependencies": {
