Chore(package): Reorder keywords A-Z

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "preinstall": "node preinstall.js"
   },
   "keywords": [
-    "vnstat",
+    "bandwidth",
     "monitoring",
-    "bandwidth"
+    "vnstat"
   ],
   "license": "Unlicense"
 }
