Chore(package): Add npm keywords

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "keywords": [
     "bandwidth",
     "monitoring",
+    "network",
+    "statistics",
     "vnstat"
   ],
   "license": "Unlicense"
