--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,5 @@ before_install:
   - 'sudo ./vnstatd -d'
   - 'sudo ./vnstat -u -i $NODE_APP_IFACE'
 node_js:
-  - '6'
-  - '5'
-  - '4'
+  - 'node'
+  - '--lts'
