--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "dotest": "^1.13.5"
+    "coveralls": "^2.12.0",
+    "dotest": "^1.15.2",
+    "eslint": "^3.18.0",
+    "istanbul": "^0.4.5"
   },
   "engines": {
     "node": ">=4.0.0"
