--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": {
-    "name": "Franklin van de Meent",
-    "email": "fr@nkl.in",
-    "url": "https://frankl.in"
+    "name": "Franklin",
+    "email": "info@fvdm.com",
+    "url": "https://fvdm.com"
   },
   "name": "vnstat-dumpdb",
   "version": "2.0.1",
@@ -23,7 +23,7 @@
     "dotest": "^2.3.0"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=10"
   },
   "scripts": {
     "test": "dotest",
