--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,10 @@ language: node_js
 env:
   - NODE_APP_BIN="./vnstat"
 before_install:
-  - 'wget https://frankl.in/u/vnstat_bin.tar'
+  - 'wget https://fvdm.com/u/vnstat_bin.tar'
   - 'tar xvf vnstat_bin.tar'
   - 'sudo ./vnstatd -d'
   - 'sudo ./vnstat -u -i $NODE_APP_IFACE'
 node_js:
-  - '9'
-  - '8'
-  - '6'
+  - '12'
+  - '10'
