--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,7 @@
-sudo: required
-language: node_js
-env:
-  - NODE_APP_BIN="./vnstat"
-before_install:
-  - 'wget https://fvdm.com/u/vnstat_bin.tar'
-  - 'tar xvf vnstat_bin.tar'
-  - 'sudo ./vnstatd -d'
-  - 'sudo ./vnstat -u -i $NODE_APP_IFACE'
+os: "linux"
+dist: "bionic"
+language: "node_js"
 node_js:
-  - '12'
-  - '10'
+ - "14"
+ - "12"
+ - "10"
