--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
   - "12"
   - "10"
 env:
-  - NODE_APP_BIN="./vnstat"
+  - NODE_APP_BIN="vnstat"
 before_install:
   - sudo apt-get -y install vnstat
   - sudo vnstatd -d
