Test: Adding no-console error to ESLint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -63,6 +63,7 @@
     "no-alert": "error",
     "no-caller": "error",
     "no-catch-shadow": "error",
+    "no-console": "error",
     "no-delete-var": "error",
     "no-div-regex": "error",
     "no-duplicate-case": "error",
