--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,36 @@
-os: "linux"
-dist: "focal"
-language: "node_js"
+# vnstat v2
+os: linux
+dist: focal
+language: node_js
 node_js:
-  - "14"
-  - "12"
-  - "10"
+  - 14
+  - 12
+  - 10
 before_install:
   - sudo apt-get -y install vnstat
-  - sudo vnstatd -d
-  - sudo vnstat -u -i $NODE_APP_IFACE
-  - wget https://fvdm.com/u/vnstat_bin.tar
-  - tar xvf vnstat_bin.tar
+  - sudo vnstat -i $NODE_APP_IFACE --add
+
+# vnstat v1
+jobs:
+  include:
+    - dist: bionic
+      node_js: 14
+      env: NODE_APP_TESTOLD=yes
+      before_install:
+        - sudo apt-get -y install vnstat
+        - sudo vnstatd -d
+        - sudo vnstat -i $NODE_APP_IFACE -u
+    - dist: bionic
+      node_js: 12
+      env: NODE_APP_TESTOLD=yes
+      before_install:
+        - sudo apt-get -y install vnstat
+        - sudo vnstatd -d
+        - sudo vnstat -i $NODE_APP_IFACE -u
+    - dist: bionic
+      node_js: 10
+      env: NODE_APP_TESTOLD=yes
+      before_install:
+        - sudo apt-get -y install vnstat
+        - sudo vnstatd -d
+        - sudo vnstat -i $NODE_APP_IFACE -u
