Chore: Cleanup and added basics

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": {
-    "name": "Franklin van de Meent",
+    "name": "Franklin",
     "email": "fr@nkl.in",
     "url": "https://frankl.in"
   },
@@ -20,10 +20,10 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "dotest": "^2.3.0"
+    "dotest": "^2"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=18"
   },
   "scripts": {
     "test": "dotest",
