--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,17 +28,21 @@ jobs:
         node-version: ${{ fromJson(needs.lts_versions.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v6
+ 
       - name: Test on Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
+ 
       - run: npm install
-      - run: npm test
-        env:
-          NODE_APP_IFACE: ${{ NODE_APP_IFACE || '' }}
-          DOTEST_NOCOV: ${{ DOTEST_NOCOV || '' }}
-          DOTEST_MINCOV: ${{ DOTEST_MINCOV || '' }}
-          DOTEST_COVFUNCTIONS: 100
+ 
+      - run: |
+          NODE_APP_IFACE=${NODE_APP_IFACE:-''}
+          DOTEST_NOCOV=${DOTEST_NOCOV:-''}
+          DOTEST_MINCOV=${DOTEST_MINCOV:-''}
+          DOTEST_COVFUNCTIONS=100
+          npm test
+  
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@master
         if: always()
