--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,8 @@ jobs:
         node-version: ${{ fromJson(needs.lts_versions.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v6
+
+      - run: "sudo apt-get update && sudo apt-get install -y vnstat"
  
       - name: Test on Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v6
